--- a/index.html
+++ b/index.html
@@ -1,191 +1,489 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!doctype html>
+<html lang="en">
+  <head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Thuthuka's Personal Site</title>
-</head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<body>
-  <table cellspacing="20">
-    <tr>
-      <!-- Image-->
-      <td>
-        <img src="ThuthukaSmallPlaceholder.jpg"
-        alt="Thuthuka Desele Profile Picture">
-      </td>
-      <td>
-        <!-- Name-->
-        <h1>Thuthuka Desele</h1>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
-        <!-- Summary-->
-        <p><em>Software Developer Intern under <strong><a href="https://www.eoh.co.za">
-          EOH</a></strong></em></p>
-        <p>I'm a software developer skilled at end to end developmet in Java, C#,
-          Mobile, Databases and Web Development.
-          <br>I have a passion for IT and technology and intend to specialise in
-          Mobile and AI</p>
-      </td>
-    </tr>
-  </table>
+    <!-- Local CSS -->
+    <link rel="stylesheet" href="css/styles.css">
 
-  <!-- Horizontal Line-->
-  <hr>
+    <!-- Page Title -->
+    <title>Home</title>
 
-  <!-- Experience Heading-->
-  <h3>Experience</h3>
+  </head>
 
-  <!-- Experience Table-->
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Period</th>
-        <th>Position</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Oct 2019 to Current</td>
-        <td>Software Developer Trainee</td>
-      </tr>
-      <tr>
-        <td>Jul 2019 to Sep 2019</td>
-        <td>Software Developer Intern</td>
-      </tr>
-      <tr>
-        <td>Apr 2019 to Jun 2019</td>
-        <td>Software Developer Learner</td>
-      </tr>
-    </tbody>
-  </table>
 
-  <!-- Horizontal Line-->
-  <hr>
 
-  <!-- Skills Heading-->
-  <h3>Skills</h3>
+  <body>
 
-  <!-- Skills Table-->
-  <table cellspacing="10">
-    <tr>
-      <td>C# (.NET, ADO.NET, ASP.NET, Windows Forms, WPF)</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Java</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Android (Java, Android API’s, Gradle, JSON, Maven)</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Flutter (Dart)</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>MS SQL Server (T-SQL)</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Google Cloud</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>SQLite</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>IBM DB2</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Oracle (PL/SQL)</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>ASP.NET</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>HTML (HTML5)</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>CSS</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>JavaScript</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Bootstrap</td>
-      <td>⭐</td>
-    </tr>
-    <tr>
-      <td>PHP</td>
-      <td>⭐</td>
-    </tr>
-  </table>
+    <section id="title" class="dark">
 
-  <!-- Horizontal Line-->
-  <hr>
+      <!-- Navbar -->
+      <nav class="navbar navbar-expand-lg navbar-dark table-dark">
 
-  <!-- Education Heading-->
-  <h3>Education</h3>
+        <!-- Dynamic Toggable Button-->
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+          data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-  <!-- Education Unordered List / Bullet Points-->
-  <ul>
-    <li>
-      National Diploma: <strong>Software Development</strong> - 2018
-        (Graduation on 20 April 2019)
-        <ul>
-          <li><strong><a href="https://www.varsitycollege.co.za">
-            Varsity College</a></strong>, Westville, KZN<</li>
-        </ul>
-    </li>
+        <!-- Collapsable Navbar Content-->
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 
-    <li>
-      NQF Level 5 Certificate: <strong>Systems Development</strong> -
-        March 2020
-        <ul>
-          <li><strong><a href="https://proserv.co.za">Proserv</a></strong>,
-            Umhlanga & Durban, KZN
-            (On Site Training)</li>
-        </ul>
-    </li>
+          <!-- Navbar Space-->
+          <ul class="navbar-nav ml-auto mr-auto">
 
-    <li>
-      Microsoft Accredited Certificate: <strong>20762C –
-        Developing SQL Database </strong> - 8 February 2019
-      <ul>
-        <li><strong><a href="https://think360.co.za">Think360</a></strong>,
-          Durban, KZN</li>
-      </ul>
-    </li>
+            <!-- Navbar Content-->
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#summary">Summary</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#work">Work Experince</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#education">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#skills">Skills Summary</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="skills.html">Skills Detailed</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="mailto:desele.work@gmail.com?subject=2020 Hiring">Contact Me</a>
+            </li>
 
-    <li>
-      Microsoft Accredited Certificate: <strong>20761C –
-        Querying Data with Transact-SQL</strong> - 25 January 2019
-      <ul>
-        <li><strong><a href="https://think360.co.za">Think360</a></strong>,
-          Durban, KZN</li>
-      </ul>
-    </li>
+          </ul>
 
-    <li>
-      Certificate: <strong>CCA Java Level 1</strong> - 6 August 2019
-      <ul>
-        <li><strong><a href="https://www.the-cca.org">
-          Cambridge Certification Authority</a></strong> Remote</li>
-      </ul>
-    </li>
-  </ul>
+        </div>
 
-  <a href="hobbies.html"><h3>Hobbies & Interets</h3></a>
+      </nav>
 
-  <a href="contact-me.html"><h3>Contact Me</h3></a>
-</body>
+
+      <!-- Title -->
+      <div class="container-fluid">
+
+        <div class="row">
+
+          <!-- Column 1-->
+          <div class="col-lg-6 col-md-12 col-sm-12">
+
+            <!-- Heading -->
+            <h1 class="name">
+              Thuthuka
+              <br>
+              Desele
+            </h1>
+
+            <p class="subtitle">I'm a Software Developer skilled in end-to-end
+              development in Web, Mobile, Databases, and PC App Development</p>
+
+          </div>
+
+
+          <!-- Column2-->
+          <div class="col-lg-6 col-md-12 col-sm-12">
+
+            <!-- Image-->
+            <img class="title-image" src="Images/ThuthukaCircular2.png"
+            alt="Thuthua-Picture">
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
+
+
+
+    <section id="summary" class="light">
+
+      <div class="container-fluid">
+
+        <h2>Summary</h2>
+
+        <p>I’m a software Developer Intern that is well-versed in many
+          programming languages. I specialize in end-to-end development in C#,
+          Android and Databases primarily, and I have interests in Machine
+          learning and hybrid mobile development.</p>
+
+      </div>
+
+    </section>
+
+
+
+    <!-- Work Experience -->
+    <section id="work" class="dark">
+
+      <!-- Heading -->
+      <h2>Work Experience</h2>
+
+      <div class="container-fluid">
+
+        <!-- Dark Table -->
+        <table class="table table-hover table-dark">
+
+          <!-- Table Header -->
+          <thead>
+
+            <!-- Table Header Row -->
+            <tr>
+              <!-- Column Headers -->
+              <th scope="col">Period</th>
+              <th scope="col">Role</th>
+              <th scope="col">Company</th>
+              <th scope="col">Duties</th>
+            </tr>
+
+          </thead>
+
+          <!-- Table Body -->
+          <tbody>
+
+            <!-- Row 1  -->
+            <tr>
+              <th scope="row">10/2019 to Current</th>
+
+              <td>Software Developer Trainee</td>
+
+              <td><a class="links-dark" href="http://www.durban.gov.za/City_Services/energyoffice/Pages/default.aspx">eThekwini Municipality Energy Office</a>, Durban, KZN</td>
+
+              <td>
+                - DB2 Training
+                <br>
+                - Revenue Managment System (RMS) Training
+              </td>
+            </tr>
+
+
+            <!-- Row 2 -->
+            <tr>
+              <th scope="row">07/2019 to 09/2019</th>
+
+              <td>Software Developer Intern</td>
+
+              <td><a class="links-dark" href="https://www.xcallibre.com">Xcallibre</a>, Berea, KZN</td>
+
+              <td>
+                - C# Training
+                <br>
+                - SQL Training
+                <br>
+                - Web Training
+                <br>
+                - Practical Work on Systems Development Qualification
+              </td>
+            </tr>
+
+
+            <!-- Row 3 -->
+            <tr>
+              <th scope="row">04/2019 to 06/2019</th>
+
+              <td>Software Developer Learner</td>
+
+              <td><a class="links-dark" href="https://www.eoh.co.za">EOH Proserv</a>, Umhlanga, KZN</td>
+
+              <td>
+                - Theoretical Work on Systems Development Qualification
+                <br>
+                - Work & Industry Training
+              </td>
+
+            </tr>
+
+          </tbody>
+
+        </table>
+
+      </div>
+
+    </section>
+
+
+
+    <!-- Education -->
+    <section id="education" class="light">
+
+      <!-- Heading -->
+      <h2>Education</h2>
+
+      <div class="container-fluid">
+
+        <!-- Light Table -->
+        <table class="table table-hover">
+
+          <!-- Table Header -->
+          <thead>
+
+            <!-- Table Header Row -->
+            <tr>
+              <!-- Column Headers -->
+              <th scope="col">Graduation</th>
+              <th scope="col">Qualification</th>
+              <th scope="col">Majour</th>
+              <th scope="col">Campus</th>
+            </tr>
+
+          </thead>
+
+          <!-- Table Body -->
+          <tbody>
+
+            <!-- Row 1  -->
+            <tr>
+              <th scope="row">2018 (Graduation on 20 April 2019)</th>
+
+              <td>National Diploma</td>
+
+              <td>Software Development</td>
+
+              <td><a class="links-light" href="https://www.varsitycollege.co.za">Varsity College</a>, Westville, KZN</td>
+            </tr>
+
+
+            <!-- Row 2 -->
+            <tr>
+              <th scope="row">March 2020</th>
+
+              <td>NQF Level 5 Certificate</td>
+
+              <td>Systems Development</td>
+
+              <td><a class="links-light" href="https://proserv.co.za">Proserv</a>, Umhlanga & Durban, KZN
+              <br>
+              (On Site Training)</td>
+            </tr>
+
+
+            <!-- Row 3 -->
+            <tr>
+              <th scope="row">8 February 2019</th>
+
+              <td>Microsoft Accredited Certificate</td>
+
+              <td>20762C – Developing SQL Database</td>
+
+              <td><a class="links-light" href="https://think360.co.za">Think360</a>, Durban, KZN</td>
+            </tr>
+
+            <!-- Row 4 -->
+            <tr>
+              <th scope="row">25 January 2019</th>
+
+              <td>Microsoft Accredited Certificate</td>
+
+              <td>20761C – Querying Data with Transact-SQL</td>
+
+              <td><a class="links-light" href="https://think360.co.za">Think360</a>, Durban, KZN</td>
+            </tr>
+
+            <!-- Row 5 -->
+            <tr>
+              <th scope="row">6 August 2019</th>
+
+              <td>Certificate</td>
+
+              <td>CCA Java Level 1</td>
+
+              <td><a class="links-light" href="https://www.the-cca.org">Cambridge Certification Authority</a>
+              <br>
+              (Remote)</td>
+            </tr>
+
+          </tbody>
+
+        </table>
+
+      </div>
+
+    </section>
+
+
+
+    <section id="skills"  class="dark">
+
+      <!-- Skills Divider-->
+      <div class="skills">
+
+        <!-- Skills Summary Heading-->
+        <h2>Skills Summary</h2>
+
+
+        <!-- Carousel -->
+        <div id="carouselSkills" class="carousel slide" data-ride="carousel">
+
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+          </ol>
+
+          <div class="carousel-inner">
+
+            <div class="carousel-item active">
+
+              <!-- PC App Skills-->
+              <div class="skill-row">
+
+                <!-- PC App Image-->
+                <img class="skill-icons left" src="images/computer.png"
+                alt="pc icon">
+
+                <h3>PC App Development</h3>
+                <p class="skill-description-left">I have extensive experince
+                  in C# and Java. I can work on the front-end / GUI and the
+                  backend portions of these programs. I am constantly further
+                  developing my skills on both.
+
+              </div>
+
+            </div>
+
+            <div class="carousel-item">
+
+              <!-- Mobile Skills-->
+              <div class="skill-row">
+
+                <!-- Mobile Image-->
+                <img class="skill-icons right" src="images/smartphone.png"
+                alt="mobile icon">
+
+                <h3>Mobile App Development</h3>
+                <p class="skill-description-right">I am exceptionally skilled
+                  in Android development using Java and I am still early in my
+                  Flutter career. My aims for 2020 are to migrate from Java
+                  development to Kotlin, become skilled at Flutter for both
+                  Android and iOS and learn Xamarin as well to bolster my
+                  cross-development capabilities further.</p>
+
+              </div>
+
+            </div>
+
+            <div class="carousel-item">
+
+              <!-- Database Skills-->
+              <div class="skill-row">
+
+                <!-- Database Image-->
+                <img class="skill-icons left" src="images/server.png"
+                alt="database icon">
+
+                <h3>Database Development</h3>
+                <p class="skill-description-left">I have experince in multiple
+                  traditional database langauges and some cloud focused ones.
+                  My aim for 2020 is to bolster my Azure skillset and further
+                  intergrate all my apps to make seemless user experiences that
+                  carry over progress from one platform to another.</p>
+
+              </div>
+
+            </div>
+
+            <div class="carousel-item">
+
+              <!-- Web App Skills-->
+              <div class="skill-row">
+
+                <!-- Web App Image-->
+                <img class="skill-icons right" src="images/domain.png"
+                alt="web icon">
+
+                <h3>Web App Development</h3>
+                <p class="skill-description-right">While skilled at web
+                  development, it is not a focus for me, though I do plan to
+                  continue improving in this area as well, such as becoming
+                  skilled at Anguular in 2020.</p>
+
+              </div>
+
+            </div>
+
+            <div class="carousel-item">
+
+              <!-- Miscellaneous Skills-->
+              <div class="skill-row">
+
+                <!-- Miscellaneous Image-->
+                <img class="skill-icons left" src="images/post-it.png"
+                alt="misc icon">
+
+                <h3>IDE Experience</h3>
+                <p class="skill-description-left">I have experience in many
+                  IDE's amd other related studios for each of my disiplines.
+                  For more detail on these please check the detailed skills
+                  section</p>
+
+              </div>
+
+            </div>
+
+            <a class="carousel-control-prev" href="#carouselSkills" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselSkills" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
+
+
+
+    <hr>
+
+
+
+    <section id="footer" class="dark">
+
+      <!-- Bottom Divider-->
+      <div class="bottom-container">
+
+        <!-- Anchors / Links-->
+        <a class="footer-link" href="https://www.linkedin.com/in/thuthuka-desele-657a23178/">LinkedIn</a>
+        <a class="footer-link" href="https://www.youtube.com/channel/UCuX9RLyqO8h4aoVUAhH-Jcg/featured">Youtube</a>
+        <a class="footer-link" href="https://github.com/ThuthukaD">Github</a>
+        <a class="footer-link" href="mailto:desele.work@gmail.com?subject=2020 Hiring">Email</a>
+        <p class="copyright">© 2020 Thuthuka Desele</p>
+
+      </div>
+
+    </section>
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+  </body>
 
 </html>
