--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
     <!-- Local CSS -->
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 
     <!-- Page Title -->
     <title>Home</title>
@@ -345,7 +345,7 @@
               <div class="skill-row">
 
                 <!-- PC App Image-->
-                <img class="skill-icons left" src="images/computer.png"
+                <img class="skill-icons left" src="Images/computer.png"
                 alt="pc icon">
 
                 <h3>PC App Development</h3>
@@ -364,7 +364,7 @@
               <div class="skill-row">
 
                 <!-- Mobile Image-->
-                <img class="skill-icons right" src="images/smartphone.png"
+                <img class="skill-icons right" src="Images/smartphone.png"
                 alt="mobile icon">
 
                 <h3>Mobile App Development</h3>
@@ -385,7 +385,7 @@
               <div class="skill-row">
 
                 <!-- Database Image-->
-                <img class="skill-icons left" src="images/server.png"
+                <img class="skill-icons left" src="Images/server.png"
                 alt="database icon">
 
                 <h3>Database Development</h3>
@@ -405,7 +405,7 @@
               <div class="skill-row">
 
                 <!-- Web App Image-->
-                <img class="skill-icons right" src="images/domain.png"
+                <img class="skill-icons right" src="Images/domain.png"
                 alt="web icon">
 
                 <h3>Web App Development</h3>
@@ -424,7 +424,7 @@
               <div class="skill-row">
 
                 <!-- Miscellaneous Image-->
-                <img class="skill-icons left" src="images/post-it.png"
+                <img class="skill-icons left" src="Images/post-it.png"
                 alt="misc icon">
 
                 <h3>IDE Experience</h3>
