--- a/portfolio.html
+++ b/portfolio.html
@@ -135,7 +135,7 @@
           <div class="col col-lg-4 col-md-12 col-sm-12">
 
             <!-- Image 1 -->
-            <img class="portfolio-Images" src="Images\m-app1.png" alt="m-app1">
+            <img class="portfolio-images" src="Images\m-app1.png" alt="m-app1">
 
             <!-- Image Description -->
             <p>Home page of the Bank App. Shows of the logged in user's name
@@ -149,7 +149,7 @@
           <div class="col col-lg-4 col-md-12 col-sm-12">
 
             <!-- Image 2 -->
-            <img class="portfolio-Images" src="Images\m-app2.png" alt="m-app2">
+            <img class="portfolio-images" src="Images\m-app2.png" alt="m-app2">
 
             <!-- Image Description -->
             <p>The Transaction History page of the Bank App. This page is
@@ -166,7 +166,7 @@
           <div class="col col-lg-4 col-sm-12">
 
             <!-- Image 3 -->
-            <img class="portfolio-Images" src="Images\m-app3.png" alt="m-app3">
+            <img class="portfolio-images" src="Images\m-app3.png" alt="m-app3">
 
             <!-- Image Description -->
             <p>The data Purchase page shows how the interface will look when the
@@ -241,7 +241,7 @@
           <div class="col col-lg-4 col-sm-12">
 
             <!-- Image 1 -->
-            <img class="portfolio-Images" src="Images\w-app1.png" alt="w-app1">
+            <img class="portfolio-images" src="Images\w-app1.png" alt="w-app1">
 
             <!-- Image Description -->
             <p>The top of the tindog website. Shows off the layout mad ethrough
@@ -252,7 +252,7 @@
           <div class="col col-lg-4 col-sm-12">
 
             <!-- Image 2 -->
-            <img class="portfolio-Images" src="Images\w-app2.png" alt="w-app2">
+            <img class="portfolio-images" src="Images\w-app2.png" alt="w-app2">
 
             <!-- Image Description -->
             <p>The midsection of the tindog website. Shows off the Bootstrap 4
@@ -263,7 +263,7 @@
           <div class="col col-lg-4 col-sm-12">
 
             <!-- Image 3 -->
-            <img class="portfolio-Images" src="Images\w-app3.png" alt="w-app3">
+            <img class="portfolio-images" src="Images\w-app3.png" alt="w-app3">
 
             <!-- Image Description -->
             <p>The bottom of the tindog website. Showing off an understanding of
