--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
 
         <div class="row">
 
-          <div class="col col-lg-12 col-md-12 col-sm-12">
+          <div class="col col-lg-12 col-md-12 col-sm-12 col-12">
 
             <!-- Video -->
             <iframe class="portfolio-video" height="586" src="https://www.youtube.com/embed/Sa3UD7lO9GU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -132,7 +132,7 @@
 
           </div>
 
-          <div class="col col-lg-4 col-md-12 col-sm-12">
+          <div class="col col-lg-4 col-md-12 col-sm-12 col-12">
 
             <!-- Image 1 -->
             <img class="portfolio-images" src="Images\m-app1.png" alt="m-app1">
@@ -146,7 +146,7 @@
 
           </div>
 
-          <div class="col col-lg-4 col-md-12 col-sm-12">
+          <div class="col col-lg-4 col-md-12 col-sm-12 col-12">
 
             <!-- Image 2 -->
             <img class="portfolio-images" src="Images\m-app2.png" alt="m-app2">
@@ -163,7 +163,7 @@
 
           </div>
 
-          <div class="col col-lg-4 col-sm-12">
+          <div class="col col-lg-4 col-sm-12 col-12">
 
             <!-- Image 3 -->
             <img class="portfolio-images" src="Images\m-app3.png" alt="m-app3">
@@ -193,7 +193,7 @@
 
         <div class="row">
 
-          <div class="col col-lg-6 col-md-12 col-sm-12">
+          <div class="col col-lg-6 col-md-12 col-sm-12 col-12">
 
             <!-- Video 1 -->
             <iframe class="portfolio-video" height="586" src="https://www.youtube.com/embed/lqiPo2jiahg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -215,7 +215,7 @@
 
           </div>
 
-          <div class="col col-lg-6 col-md-12 col-sm-12">
+          <div class="col col-lg-6 col-md-12 col-sm-12 col-12">
 
             <!-- Video 2 -->
             <iframe class="portfolio-video" height="586" src="https://www.youtube.com/embed/vKT-Fgt3d6I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -238,7 +238,7 @@
 
           </div>
 
-          <div class="col col-lg-4 col-sm-12">
+          <div class="col col-lg-4 col-sm-12 col-12">
 
             <!-- Image 1 -->
             <img class="portfolio-images" src="Images\w-app1.png" alt="w-app1">
@@ -249,7 +249,7 @@
 
           </div>
 
-          <div class="col col-lg-4 col-sm-12">
+          <div class="col col-lg-4 col-sm-12 col-12">
 
             <!-- Image 2 -->
             <img class="portfolio-images" src="Images\w-app2.png" alt="w-app2">
@@ -260,7 +260,7 @@
 
           </div>
 
-          <div class="col col-lg-4 col-sm-12">
+          <div class="col col-lg-4 col-sm-12 col-12">
 
             <!-- Image 3 -->
             <img class="portfolio-images" src="Images\w-app3.png" alt="w-app3">
