--- a/skills.html
+++ b/skills.html
@@ -45,16 +45,16 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#summary">Summary</a>
+              <a class="nav-link" href="index.html#summary">Summary</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#work">Work Experince</a>
+              <a class="nav-link" href="index.html#work">Work Experince</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#education">Education</a>
+              <a class="nav-link" href="index.html#education">Education</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#skills">Skills Summary</a>
+              <a class="nav-link" href="index.html#skills">Skills Summary</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="skills.html">Skills Detailed</a>
