--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                 <p class="skill-description-right">While skilled at web
                   development, it is not a focus for me, though I do plan to
                   continue improving in this area as well, such as becoming
-                  skilled at Anguular in 2020.</p>
+                  skilled at Angular in 2020.</p>
 
               </div>
 
