--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
     <!-- Local CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 
     <!-- Page Title -->
     <title>Home</title>
@@ -45,16 +45,16 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#summary">Summary</a>
+              <a class="nav-link" href="index.html#summary">Summary</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#work">Work Experince</a>
+              <a class="nav-link" href="index.html#work">Work Experince</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#education">Education</a>
+              <a class="nav-link" href="index.html#education">Education</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#skills">Skills Summary</a>
+              <a class="nav-link" href="index.html#skills">Skills Summary</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="skills.html">Skills Detailed</a>
@@ -394,14 +394,14 @@
               <div class="skill-row">
 
                 <!-- PC App Image-->
-                <img class="skill-icons left" src="images/computer.png"
+                <img class="skill-icons left" src="Images/computer.png"
                 alt="pc icon">
 
-                <h3>Desktop App Development</h3>
+                <h3 class="ss-pc">PC App Development</h3>
                 <p class="skill-description-left">I have extensive experience
                   in C# and Java. I can work on the front-end / GUI and the
                   backend portions of these programs. I am constantly further
-                  developing my skills on both.
+                  developing my skills on both.</p>
 
               </div>
 
@@ -413,10 +413,10 @@
               <div class="skill-row">
 
                 <!-- Mobile Image-->
-                <img class="skill-icons right" src="images/smartphone.png"
+                <img class="skill-icons right" src="Images/smartphone.png"
                 alt="mobile icon">
 
-                <h3>Mobile App Development</h3>
+                <h3 class="ss-mobile">Mobile App Development</h3>
                 <p class="skill-description-right">I am exceptionally skilled
                   in Android development using Java and I am still early in my
                   Flutter career. My aims for 2020 are to migrate from Java
@@ -434,10 +434,10 @@
               <div class="skill-row">
 
                 <!-- Database Image-->
-                <img class="skill-icons left" src="images/server.png"
+                <img class="skill-icons left" src="Images/server.png"
                 alt="database icon">
 
-                <h3>Database Development</h3>
+                <h3 class="ss-data">Database Development</h3>
                 <p class="skill-description-left">I have experience in multiple
                   traditional database languages and some cloud-focused ones.
                   My aim for 2020 is to bolster my Azure skillset and further
@@ -454,10 +454,10 @@
               <div class="skill-row">
 
                 <!-- Web App Image-->
-                <img class="skill-icons right" src="images/domain.png"
+                <img class="skill-icons right" src="Images/domain.png"
                 alt="web icon">
 
-                <h3>Web App Development</h3>
+                <h3 class="ss-web">Web App Development</h3>
                 <p class="skill-description-right">While skilled at web
                   development, it is not a focus for me, though I do plan to
                   continue improving in this area as well, such as becoming
@@ -473,14 +473,14 @@
               <div class="skill-row">
 
                 <!-- Miscellaneous Image-->
-                <img class="skill-icons left" src="images/post-it.png"
+                <img class="skill-icons left" src="Images/post-it.png"
                 alt="misc icon">
 
                 <h3>IDE Experience</h3>
                 <p class="skill-description-left">I have experience in many
                   IDE's and other related studios for each of my disciplines.
                   For more detail on these please check the detailed skills
-                  section</p>
+                  section.</p>
 
               </div>
 
