--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
     <!-- Local CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 
     <!-- Page Title -->
     <title>Skills</title>
@@ -45,16 +45,16 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#summary">Summary</a>
+              <a class="nav-link" href="index.html#summary">Summary</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#work">Work Experince</a>
+              <a class="nav-link" href="index.html#work">Work Experince</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#education">Education</a>
+              <a class="nav-link" href="index.html#education">Education</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#skills">Skills Summary</a>
+              <a class="nav-link" href="index.html#skills">Skills Summary</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="skills.html">Skills Detailed</a>
