--- a/skills.html
+++ b/skills.html
@@ -108,10 +108,10 @@
         <!-- PC App Skills-->
         <div class="detailed-skill-row">
 
-          <h2>Desktop Application Development</h2>
+          <h2>PC Application Development</h2>
 
           <!-- PC App Image-->
-          <img class="skill-icons" src="images/computer.png" alt="pc icon">
+          <img class="skill-icons" src="Images/computer.png" alt="pc icon">
 
           <!-- Credit-->
           <p class="credit">"Icon made by Chanut from <a href="www.flaticon.com">
@@ -133,7 +133,7 @@
           <h2>Mobile Application Development</h2>
 
           <!-- Mobile Image-->
-          <img class="skill-icons" src="images/smartphone.png" alt="mobile icon">
+          <img class="skill-icons" src="Images/smartphone.png" alt="mobile icon">
 
           <!-- Credit-->
           <p class="credit">"Icon made by Freepik from <a href="www.flaticon.com">
@@ -156,7 +156,7 @@
           <h2>Databases Development</h2>
 
           <!-- Database Image-->
-          <img class="skill-icons" src="images/server.png" alt="database icon">
+          <img class="skill-icons" src="Images/server.png" alt="database icon">
 
           <!-- Credit-->
           <p class="credit">"Icon made by DinosoftLabs from
@@ -200,7 +200,7 @@
           <h2>Web Application Development</h2>
 
           <!-- Web App Image-->
-          <img class="skill-icons" src="images/domain.png" alt="web icon">
+          <img class="skill-icons" src="Images/domain.png" alt="web icon">
 
           <!-- Credit-->
           <p class="credit">"Icon made by Freepik from <a href="www.flaticon.com">
@@ -244,7 +244,7 @@
           <h2>Miscellaneous Experience</h2>
 
           <!-- Miscellaneous Image-->
-          <img class="skill-icons" src="images/post-it.png" alt="misc icon">
+          <img class="skill-icons" src="Images/post-it.png" alt="misc icon">
 
           <!-- Credit-->
           <p class="credit">"Icon made by Freepik from
