--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
         <p>I’m a Junior Software Developer that is well-versed in many
           programming languages. I specialize in end-to-end development
           in C#, Android and Databases primarily and I have interests in
-          Machine Learning and hybrid mobile development. Please visit my
-          website that’s attached above to view some of my work.</p>
+          Machine Learning and hybrid mobile development.</p>
 
       </div>
 
